tests/cases/match/errors/match-unreachable-after-wildcard.ari
enum Choice {
  A,
  B,
}

fn main() -> i64 {
  let value = A;
  match value {
    _ => {
      return 1;
    }
    B => {
      return 2;
    }
  }
}
